[metadata]
name = gncpy
version = 0.0.0
url = https://github.com/drjdlarson/gncpy
author = Laboratory for Autonomy GNC and Estimation Research (LAGER)
description = A package for Guidance, Navigation, and Control (GNC) algorithms.
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
keywords =
    Guidance Navigation and Control
    dynamics
    kalman filter
    reinforcement learning
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    numpy
    scipy
    matplotlib
tests_require =
    pytest
    numpy
python_requires = >=3.7


[options.packages.find]
where=src
